Implement multilingual support and enhance chat functionality.
- Add `LanguageService` for managing app language settings.
- Integrate `@ngx-translate/core` for translations with English and Russian support.
- Update chat layout with dynamic messaging and emoji picker.
- Enable better styling and functionality with `TailwindCSS` and `PrimeUI`.
- Extend authentication flow with persistent user login state.

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -79,7 +79,8 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+              "src/assets"
             ],
             "styles": [
               "src/styles.scss"
