--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@google-cloud/translate": "^8.0.0",
     "cors": "^2.8.5",
+    "deepl-node": "^1.19.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "firebase-admin": "^12.6.0",
