Remove `package-lock.json` from the repository.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,10 +19,10 @@
     "@angular/router": "^20.1.0",
     "@ngx-translate/core": "^17.0.0",
     "@ngx-translate/http-loader": "^17.0.0",
-    "@primeuix/themes": "^1.2.3",
     "emoji-picker-element": "1.26.3",
-    "primeicons": "^7.0.0",
     "primeng": "^20.0.0",
+    "primeicons": "^7.0.0",
+    "@primeuix/themes": "^1.2.3",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.8.0",
     "tailwindcss-primeui": "^0.6.1",
@@ -30,6 +30,9 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
+    "@tailwindcss/postcss": "^4.1.11",
     "@angular/build": "^20.1.4",
     "@angular/cli": "^20.1.4",
     "@angular/compiler-cli": "^20.1.0",
@@ -40,6 +43,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.8.2"
+    "typescript": "~5.8.2",
+    "autoprefixer": "^10.4.21"
   }
 }
