Add Karma configuration and improve `language-selector` test coverage.
- Introduce `karma.conf.js` for unit testing setup.
- Enhance `language-selector.spec.ts` with additional test cases.
- Update `angular.json` to include Karma configuration and polyfills.
- Clean up imports in related files for consistency.

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -71,6 +71,8 @@
           "builder": "@angular/build:karma",
           "options": {
             "polyfills": [
+              "zone.js",
+              "zone.js/testing"
             ],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
@@ -82,7 +84,8 @@
             ],
             "styles": [
               "src/styles.scss"
-            ]
+            ],
+            "karmaConfig": "karma.conf.js"
           }
         }
       }
