--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,12 +17,13 @@
     "@angular/forms": "^20.1.0",
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
+    "@fractalsoftware/random-avatar-generator": "^1.0.11",
     "@ngx-translate/core": "^17.0.0",
     "@ngx-translate/http-loader": "^17.0.0",
-    "emoji-picker-element": "1.26.3",
-    "primeng": "^20.0.0",
-    "primeicons": "^7.0.0",
     "@primeuix/themes": "^1.2.3",
+    "emoji-picker-element": "1.26.3",
+    "primeicons": "^7.0.0",
+    "primeng": "^20.0.0",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.8.0",
     "tailwindcss-primeui": "^0.6.1",
@@ -30,20 +31,20 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11",
-    "@tailwindcss/postcss": "^4.1.11",
     "@angular/build": "^20.1.4",
     "@angular/cli": "^20.1.4",
     "@angular/compiler-cli": "^20.1.0",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/jasmine": "~5.1.0",
+    "autoprefixer": "^10.4.21",
     "jasmine-core": "~5.8.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.8.2",
-    "autoprefixer": "^10.4.21"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
+    "typescript": "~5.8.2"
   }
 }
