--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "cors": "^2.8.5",
     "deepl-node": "^1.19.0",
     "dotenv": "^16.4.5",
